syntax = "proto3";
package flare;

service FlareKv {
  rpc Get (SingleKeyRequest) returns (ValueResponse);
  rpc Delete (SingleKeyRequest) returns (EmptyResponse);
  rpc Set (SetRequest) returns (EmptyResponse);
  rpc GetTopology(GetTopologyRequest) returns (TopologyInfo);
  rpc WatchTopology(GetTopologyRequest) returns (stream TopologyInfo);
  rpc CreateCollection(CreateCollectionRequest) returns (CreateCollectionResponse);
}

message GetTopologyRequest {
  repeated string collection = 1;
}

message TopologyInfo {
  string collection = 1;
  uint32 seed = 2;
  uint32 total = 3;
}


message SingleKeyRequest {
  string key = 1;
  string collection = 2;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
  string collection = 3;
}

message EmptyResponse {

}

message ValueResponse {
  string key = 1;
  bytes value = 2;
}

message CreateCollectionRequest{
  string name = 1;
  int32 shard_count = 2;
  int32 replica_count = 3;
  repeated ShardAssignment shard_assignments = 4;
  string shard_type = 6;
  map<string, string> options = 7;
}

message ShardAssignment {
  uint64 primary = 1;
  repeated uint64 replica = 2;
}

message CreateCollectionResponse {
  string name = 1;
}